CSS TERMINE en desktop
faut encore rajouter la déco, et gérer mieux que ça le bouton goTop

--- a/illustration.html
+++ b/illustration.html
@@ -78,7 +78,7 @@
             <section class="bref">
                 <h3>En bref</h3>
                 <p>Lors de ma veille continue en inspiration design UI/UX, j’ai découvert qu’une part de plus en plus importante des sites web et applications mobiles étaient fournis en illustrations en tous genres. J’ai donc décidé de m’y intéresser et de tirer profit de mon enseignement en illustration 2D pour proposer des visuels modernes qui s’allient avec des éléments d’interface.</p>
-                <p><em>Note :</em> le contenu de cette page est voué à s’étoffer régulièrement !</p>
+                <p><em>Note :</em> le contenu de cette page est voué à s’étoffer régulièrement&nbsp;!</p>
             </section>
             <section class="showcase">
                 <img src="img/content/vector_1.png" alt="Illu 1" title="Illustration faite sur Affinity Designer" class="illustration">
@@ -97,6 +97,7 @@
             </div>
         </article>
     </main>
+    <a href="#" class="top"></a>
     <footer class="footer"> <!--Le footer-->
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
