--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
             </ul>
         </section>
     </main>
+    <a href="#" class="top"></a>
     <footer class="footer">
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
