--- a/transmedia.html
+++ b/transmedia.html
@@ -116,13 +116,15 @@
             <section class="audience">
                 <h3>Audience et utilisateurs</h3>
                 <p>Pour ce projet, nous visons différents types de profils, sur base démographique, puis sur base plus culturelle.</p>
-                <div class="users">
-                    <h4>Jeunes LGBT+ francophones</h4>
-                    <p>Inclus par la suite dans une communauté hétérosexuelle plus large, afin de célébrer la diversité et susciter des débats</p>
-                </div>
-                <div class="users">
-                    <h4>Amateurs de thrillers et policiers</h4>
-                    <p>Nous visons également les amateurs de séries, webséries, oeuvres interactives et nouvelles narrations</p>
+                <div class="audience_content">
+                    <div class="users">
+                        <h4>Jeunes LGBT+ francophones</h4>
+                        <p>Inclus par la suite dans une communauté hétérosexuelle plus large, afin de célébrer la diversité et susciter des débats.</p>
+                    </div>
+                    <div class="users">
+                        <h4>Amateurs de thrillers et policiers</h4>
+                        <p>Nous visons également les amateurs de séries, webséries, oeuvres interactives et nouvelles narrations.</p>
+                    </div>
                 </div>
             </section>
             <section class="amal_schemas">
@@ -152,6 +154,7 @@
             </div>
         </article>
     </main>
+    <a href="#" class="top"></a>
     <footer class="footer"> <!--Le footer-->
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
