--- a/design.html
+++ b/design.html
@@ -83,7 +83,7 @@
                 <p>J’étais un membre assez actif sur certains d’entre eux, où la communauté se concentrait sur la création de “signatures”. Celles-ci sont des décorations assez petites de l’espace signature des posts publiés sur ces forums.</p>
                 <p>J’ai fait mes premiers pas sur Photoshop à 16 ans, et depuis, je n’ai plus su arrêter ! C’est également ce qui m’a poussé à choisir ma voie profesionnelle : le design et le graphisme.</p>
             </section>
-            <section class="showcase">
+            <section class="tag_showcase">
                 <ul class="tags_grid">
                     <li class="tag">
                         <img src="img/content/tag_1.png" alt="création 1" title="Création graphique">
@@ -121,19 +121,54 @@
                     <li class="tag">
                         <img src="img/content/tag_12.png" alt="création 12" title="Création graphique">
                     </li>
+                    <li class="tag">
+                        <img src="img/content/tag_1.png" alt="création 1" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_2.png" alt="création 2" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_3.png" alt="création 3" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_4.png" alt="création 4" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_5.png" alt="création 5" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_6.png" alt="création 6" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_7.png" alt="création 7" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_8.png" alt="création 8" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_9.png" alt="création 9" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_10.png" alt="création 10" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_11.png" alt="création 11" title="Création graphique">
+                    </li>
+                    <li class="tag">
+                        <img src="img/content/tag_12.png" alt="création 12" title="Création graphique">
+                    </li>
                 </ul>
-                <aside class="selection_travaux">
-                    <p>Sélection de travaux</p>
-                </aside>
                 <div class="tagging">
                     <p>Ces signatures, appelées “tags” en anglais, ont un format généralement assez petit, car elles sont résolument orientées web. Le but est de développer un style graphique personnel, à chaque fois différent, pour ensuite le partager à d’autres amateurs du genre.</p>
                     <p>L’avantage de la taille de ce format, c’est qu’elle impose de se réinventer à chaque fois, que ce soit dans le cadrage, la technique, ou le style. Cela permet de développer une sacré diversité, et d’être capable de passer d’un style à l’autre sans souci.</p>
                     <p>Un autre avantage de cette taille est la vitesse d’exécution. Il faut rarement plus de deux heures pour être satisfait de son résultat. Ce qui permet de ne pas trop s’impliquer émotionnellement dans son oeuvre. Si l’on n’est pas rapidement satisfait, il est facile de tout effacer et reprendre à zéro. Cela force également d’arriver rapidement à un résultat qui nous plait, donc on maximise son efficacité.</p>
                 </div>
             </section>
-            <div class="more">
-                <h4>Plus de "tags" sur mon Behance !</h4>
-                <a href="https://www.behance.net/NikoGFX" target="_blank">Voir plus</a>
+            <div class="behance">
+                <div class="more">
+                    <h4>Plus de "tags" sur mon Behance !</h4>
+                    <a href="https://www.behance.net/NikoGFX" target="_blank">Voir plus</a>
+                </div>
             </div>
         </article>
         <article class="cta">
@@ -144,6 +179,7 @@
             </div>
         </article>
     </main>
+    <a href="#" class="top"></a>
     <footer class="footer"> <!--Le footer-->
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
