--- a/playzone.html
+++ b/playzone.html
@@ -245,6 +245,7 @@
             </div>
         </article>
     </main>
+    <a href="#" class="top"></a>
     <footer class="footer"> <!--Le footer-->
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
