bouton top fonctionne correctement !
La suite : les décos et le responsive !

--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
             </div>
         </article>
     </main>
-    <a href="#" class="top"></a>
+    <a href="#" class="hidden top"></a>
     <footer class="footer"> <!--Le footer-->
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
