--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
             </div>
         </article>
     </main>
-    <a href="#" class="top"></a>
+    <a href="#" class="hidden top"></a>
     <footer class="footer">
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
