--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <nav class="nav">
         <section class="container">
             <a href="#" class="home_link">Nikola</a>
+            <div class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav_links">
                 <li><a href="about.html">à propos</a></li>
                 <li>
@@ -236,13 +241,13 @@
             <ul class="les_avis container"> <!--attention, besoin de vrai contenu-->
                 <li class="avis">
                     <figure>
-                        <img src="img/testimonials/avis_1.png" alt="portrait de Jean-Michel Saive" title="Jean-Michel Saive, cet incroyable pongiste belge !">
+                        <img src="img/testimonials/juif.jpg" alt="portrait de Pierre Juif" title="Pierre Juif, Creative Web Designer">
                         <figcaption>
-                            <h3 class="avis_name">Jean-Michel Saive</h3>
-                            <p class="avis_position">Formateur UX @techobel</p>
+                            <h3 class="avis_name">Pierre Juif</h3>
+                            <p class="avis_position">Creative Web Designer</p>
                         </figcaption>
                     </figure>
-                    <p class="avis_content"><span class="accent">“</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
+                    <p class="avis_content"><span class="accent">“</span>Designer talentueux. Ayant fait équipe avec Nikola, je peux attester de son efficacité et de sa rigueur.</p>
                 </li>
                 <li class="avis">
                     <figure>
