--- a/work.html
+++ b/work.html
@@ -21,6 +21,11 @@
     <nav class="nav"> <!--La navigation-->
         <section class="container">
             <a href="index.html" class="home_link">Nikola</a>
+            <div class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav_links">
                 <li><a href="about.html">à propos</a></li>
                 <li>
