--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
                     <h2>Formation</h2>
                     <p>Pendant mes études, j’ai d’abord suivi une orientation artistique et audiovisuelle. Je me suis ensuite reconverti vers le design web et j’y ai trouvé ma passion. J’utilise mes compétences acquises pendant mes études pour enrichir mes interfaces et mes parcours utilisateurs, quel que soit le support.</p>
                 </div>
-                <ul class="formations"> <!--probablement en flex, je vois pas comment faire ça en grid sans intégrer le titre dans la grid-->
+                <ul class="formations"> <!--probablement en flex, je vois pas comment faire ça en grid sans intégrer le titre dans la grid (en fait j'y suis arrivé)-->
                     <li class="school technobel">
                         <span class="date accent">09/19 - 04/20</span>
                         <div class="school_content">
