CSS MOBILE ENFIN FINI OMG !!!!

--- a/playzone.html
+++ b/playzone.html
@@ -212,7 +212,7 @@
                 <img src="img/content/playzone_wireframe.png" alt="Wireframe" title="deuxième étape du processus : le wireframe">
                 <img src="img/content/playzone_interface.png" alt="Interface" title="après plusieurs test utilisateurs, on obtient une interface cohérente">
             </section>
-            <section class="design_sytem">
+            <section class="design_system">
                 <h2>Design System</h2>
                 <img src="img/content/playzone_typographie.png" alt="Typographie" title="Nos choix typographiques se sont arrêtés sur ces polices">
                 <h3 class="color_title">Couleurs</h3>
